--- a/members/王吉光/task6/code3.html
+++ b/members/王吉光/task6/code3.html
@@ -4,26 +4,19 @@
 	<meta charset="UTF-8">
 	<title>code3</title>
 	<style>
-		body{
-			background-color: #fff;
-
-		}
 		table{
 			width: 800px;
 			margin: 0 auto;
 			border-collapse: collapse;
 			text-align: center;
-			font-size: 20px;
 		}
 		th{
 			background-color: #33bbff;
-			border: 1.5px solid #ccc;
-			padding: 20px;
 			font-style:bold;
 		}
-		td{
-			padding: 20px;
-			border: 1.5px solid #ccc;
+		th,td{
+			line-height: 30px;
+			border: 1px solid #ccc;
 		}
 		tr{
 			background-color: #ffffff;
