--- a/members/王吉光/task10/task10-code1.html
+++ b/members/王吉光/task10/task10-code1.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>task10-code1</title>
-	<style>
-	*{
+	<style>  
+    *{
   margin:0;
   padding:0;
   line-height:1.5rem;
 }
-#header>.wrap,section.wrap,#footer>.wrap{
+.wrap{
   width:900px;
   margin:0 auto;
   overflow:hidden;
@@ -17,12 +17,19 @@
 h1,h2,h3.h4,h5,h6{
   padding:10px 0px;
 }
+
+.clear:after{
+  content:'';
+  display:block;
+  clear:both;
+}
+
 #header{
   background-color:#333;
   height:50px;
   margin-bottom:10px;
 }
-.nav img{
+#header img{
   height:40px;
   float:left;
 }
@@ -39,7 +46,7 @@ h1,h2,h3.h4,h5,h6{
   line-height:50px;
   color:white;
   text-decoration:none;
-  padding:20px;
+  padding:20px 20px 40px 20px;
   margin:5px;
   font-weight:bold;
 }
@@ -79,10 +86,10 @@ h1,h2,h3.h4,h5,h6{
 </style>
 </head>
 <body>
-  <header id="header">
-    <div class="wrap">
-  <nav class="nav">
-    <a href="#"><img src="http://cdn.jirengu.com/public/logo-tiny.png" alt="" /></a>
+ <header id="header">
+    <div class="wrap clear">
+     <a href="#"><img src="http://cdn.jirengu.com/public/logo-tiny.png" alt="" /></a>
+  <nav class="nav clear">
     <ul>
       <li><a href="#">经历</a></li>
       <li><a href="#">技能</a></li>
@@ -92,7 +99,7 @@ h1,h2,h3.h4,h5,h6{
     </nav>
    <div>
   </header>
-  <section class="wrap">
+  <section class="wrap clear">
   <aside class="aside">
     左边栏
     </aside>
@@ -104,7 +111,7 @@ h1,h2,h3.h4,h5,h6{
   </section>
   <footer id="footer">
     <div class="wrap">
-   <ul>
+   <ul class="clear">
     <li>
       <a href="#">饥人谷</a>
     </li>
